assets/css/base.less
/* color palette from <https://github.com/vuejs/theme> */
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root {
  --vt-c-white: #ffffff;
  --vt-c-white-soft: #f8f8f8;
  --vt-c-white-mute: #f2f2f2;

  --vt-c-light: #f3f3f2;

  --vt-c-contrast: rgba(171, 225, 255, 1);
  --vt-c-contrast-400: rgba(171, 225, 255, 0.2);

  --vt-c-black: #181818;
  --vt-c-black-soft: #222222;
  --vt-c-black-mute: #282828;

  --vt-c-dark: #0C0F13;

  --vt-c-indigo: #2c3e50;

  --vt-c-accent-1: #EDEDA6;
  --vt-c-accent-2: #ABE1FF;
  --vt-c-secondary: #737373;

  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);

  --vt-c-text-light-1: var(--vt-c-indigo);
  --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
  --vt-c-text-dark-1: var(--vt-c-white);
  --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
}

/* semantic color variables for this project */
:root {
  --color-background: var(--vt-c-light);
  --color-background-soft: var(--vt-c-white-soft);
  --color-background-mute: var(--vt-c-white-mute);
  --color-background-contrast: var(--vt-c-contrast);
  --color-background-contrast-lighter: var(--vt-c-contrast-400);
  --color-background-dark: var(--vt-c-dark);
  --color-background-accent-1: var(--vt-c-accent-1);
  --color-background-accent-2: var(--vt-c-accent-2);

  --color-border: var(--vt-c-light);
  --color-border-hover: var(--vt-c-divider-light-1);
  --color-border-accent-1: var(--vt-c-accent-1);
  --color-border-accent-2: var(--vt-c-accent-2);
  --color-heading: var(--vt-c-text-light-1);
  --color-text: var(--vt-c-dark);
  --color-text-light: var(--vt-c-white-soft);
  --color-text-secondary: var(--vt-c-secondary);
  --color-text-accent-1: var(--vt-c-accent-1);
  --color-text-accent-2: var(--vt-c-accent-2);

  --section-gap: 160px;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --color-background: var(--vt-c-black);
    --color-background-soft: var(--vt-c-black-soft);
    --color-background-mute: var(--vt-c-black-mute);

    --color-border: var(--vt-c-divider-dark-2);
    --color-border-hover: var(--vt-c-divider-dark-1);

    --color-heading: var(--vt-c-text-dark-1);
    --color-text: var(--vt-c-text-dark-2);
  }
} */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  font-weight: 700;
}

body {
  min-height: 100vh;
  color: var(--color-text);
  background: var(--color-background-soft);
  transition:
    color 0.5s,
    background-color 0.5s;
  line-height: 1.6;
  font-optical-sizing: auto;
  font-family:
  'Comfortaa',
    Inter,
    -apple-system,
    BlinkMacSystemFont,
    'Segoe UI',
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    'Fira Sans',
    'Droid Sans',
    'Helvetica Neue',
    sans-serif;
  font-size: 16px;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  scroll-behavior: smooth;
}

.icon-social {
  height: 32px;
  width: 32px;
  color: var(--color-text-light);
}

.title {
  font-family:
      'Roboto',
      sans-serif;
}

.text-secondary {
  color: var(--color-text-secondary);
}

.text-accent-2 {
  color: var(--color-text-accent-2);
}

.btn-link {
  display: inline-flex;
  align-items: center;
  padding: 8px 24px;
  line-height: 1.8;
  border-radius: 6px;
  // stroke: var(--color-text);
}

.bg-dark {
  background-color: var(--color-background-dark);
  color: var(--color-text-light);
}


.nav-link {
  position: relative;
  display: inline-block;
  text-decoration: none;
  /* font-size: 16px; */
  /* line-height: 2.5; */
  border-bottom: 1px solid transparent;
  /* Initial transparent border */
  border-radius: 5px;
  transition: all 0.4s ease-out;
}

.nav-link::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border-bottom: 1px solid var(--color-border-accent-1);
  border-left: none;
  border-right: none;
  z-index: -1;
  transform-origin: left;
  transform: scaleX(0);
  transition: transform 0.4s ease-out;
}

.nav-link:hover::after {
  transform: scaleX(1);
  /* Draw the top and bottom borders */
  transition-delay: 0.2s;
  /* Delay for sequential effect */
}

